--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
 
 <head>
   <meta charset="utf-8">
-
+  <link rel="stylesheet" href="css/styles.css" type="text/css">
   <script src="js/jquery.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/scripts.js"></script>
 </head>
 
 <body>
-  <h3>Ice cream</h3>
+  <h3 style="color:red">Ice cream</h3>
   <div id="blanks">
     <form>
       <div class="form-group">
-        <label for="first">Icecream flavors</label>
+        <label for="first" style="color:red">Icecream flavors</label>
         <input id="first" type="text" placeholder="flavor"></input>
       </div>
       <button type="submit" class="btn btn-primary">Submit</button>
